2010-05-10 Borut Razem <borut.razem AT siol.net>

	* src/Makefile.in: added -Wall
	* sdas/linksrc/lkarea.c: fixed bug #2999446: ds390 xram limit at 0x400000
	* asxxsrc/asmain.c: fixed compiler warning

2010-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/cpp/sdcpp.dsp: added sdcpp-diagnostic.c

2010-05-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strtok.c: cosmetic changes
	* sdas/linksrc/aslink.dsp: removed lkgb.c
	* src/SDCCast.c (gatherImplicitVariables): fixed bug 2956580, const iTemp
	* src/z80/peeph-gbz80.def (rule 16): fixed non-existent operandsNotSame bug
	* support/regression/tests/bug2956580.c: new, added

2010-05-05 Borut Razem <borut.razem AT siol.net>

	* support/cpp/sdcpp.opt: fixed bug #2996806: Werror broken

2010-05-04 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/sdcdb.c: fixed compiler warnings

2010-05-03 Borut Razem <borut.razem AT siol.net>

	* support/cpp/Makefile.in, support/cpp/sdcpp-diagnostic.c,
	  support/cpp/sdcpp.h, support/cpp/sdcpp-opts.c:
	  added c_cpp_error diagnostic callback function

2010-05-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/C8051F330.h,
	* device/include/mcs51/C8051F336.h,
	* device/include/mcs51/C8051F350.h,
	* device/include/mcs51/C8051F410.h,
	* device/include/mcs51/C8051T630.h: applied patch 2994867, thanks Steven Borley

2010-04-22 Borut Razem <borut.razem AT siol.net>

	* support/cpp/libcpp/charset.c, support/cpp/libcpp/directives.c,
	  support/cpp/libcpp/errors.c, support/cpp/libcpp/expr.c,
	  support/cpp/libcpp/files.c, support/cpp/libcpp/identifiers.c,
	  support/cpp/libcpp/include/cpp-id-data.h,
	  support/cpp/libcpp/include/cpplib.h,
	  support/cpp/libcpp/include/line-map.h,
	  support/cpp/libcpp/include/symtab.h, support/cpp/libcpp/init.c,
	  support/cpp/libcpp/internal.h, support/cpp/libcpp/lex.c,
	  support/cpp/libcpp/line-map.c, support/cpp/libcpp/macro.c,
	  support/cpp/libcpp/mkdeps.c, support/cpp/libcpp/symtab.c,